--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,9 @@ a {
 #__next {
   height: 100%;
 }
+
+.title {
+  font-family: "club-lithographer", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
