--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ body {
     Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
     overflow: scroll;
+  background-color: black;
 }
 
 a {
