--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'gobold-thin';
+  src: url('/fonts/gobold-thin.otf');
+}
+
 html,
 body {
   width: 100%;
@@ -27,7 +32,6 @@ a {
 }
 
 .title {
-  font-family: "club-lithographer", sans-serif;
-  font-weight: 400;
-  font-style: italic;
+  font-family: "gobold-thin";
 }
+
